Bug 1172488 - Small clickable text nodes are wrongly detected in cluster detection process. r=kats